WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314655
AX: Cache unignored children on AXIsolatedTree to eliminate redundant subtree walks
https://bugs.webkit.org/show_bug.cgi?id=314655
Summary
AX: Cache unignored children on AXIsolatedTree to eliminate redundant subtree...
Tyler Wilcock
Reported
2026-05-12 11:44:02 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-12 11:44:09 PDT
<
rdar://problem/176904705
>
Tyler Wilcock
Comment 2
2026-05-12 11:57:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64773
EWS
Comment 3
2026-05-13 11:15:22 PDT
Committed
313177@main
(15c92bda16a3): <
https://commits.webkit.org/313177@main
> Reviewed commits have been landed. Closing PR #64773 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug